k18s/istio/gateway-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway-vs
spec:
  hosts:
    - "*"
  gateways:
    - gateway-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: gateway-service
            port:
              number: 8080
